Add AdjustUnbalancedTx effect
Use coinsPerUTxOWord from protocolParameters

--- a/plutus-pab/plutus-pab.cabal
+++ b/plutus-pab/plutus-pab.cabal
@@ -146,6 +146,7 @@ library
         cardano-wallet-core -any,
         cardano-wallet-core-integration -any,
         cardano-wallet-launcher -any,
+        cardano-ledger-core -any,
         containers -any,
         contra-tracer -any,
         cryptonite -any,
