--- a/plutus-contract/plutus-contract.cabal
+++ b/plutus-contract/plutus-contract.cabal
@@ -112,6 +112,7 @@ library
     build-depends:
         cardano-api -any,
         cardano-crypto -any,
+        cardano-ledger-core -any,
     build-depends:
         aeson >= 1.5.2,
         aeson-pretty -any,
