--- a/plutus-ledger-constraints/plutus-ledger-constraints.cabal
+++ b/plutus-ledger-constraints/plutus-ledger-constraints.cabal
@@ -44,6 +44,7 @@ library
     build-depends:
         base >=4.9 && <5,
         aeson -any,
+        cardano-api -any,
         containers -any,
         lens -any,
         mtl -any,
