More tidy up, switch cli to JSON (as much as possible)

--- a/plutus-streaming/plutus-streaming.cabal
+++ b/plutus-streaming/plutus-streaming.cabal
@@ -47,7 +47,6 @@ library
         plutus-chain-index-core,
         stm,
         streaming,
-        transformers,
         ouroboros-network,
         hysterical-screams
 
@@ -62,3 +61,4 @@ executable plutus-streaming-cli
         cardano-api,
         optparse-applicative,
         streaming,
+        text
