Replace ChainTip by ChainPoint the event streaming type

--- a/plutus-streaming/plutus-streaming.cabal
+++ b/plutus-streaming/plutus-streaming.cabal
@@ -37,6 +37,7 @@ library
         Plutus.Streaming
         Plutus.Streaming.ChainIndex
         Plutus.Streaming.LedgerState
+        Plutus.Streaming.Transactions
     build-depends:
         base >=4.9 && <5,
         async,
