--- a/plutus-ledger/plutus-ledger.cabal
+++ b/plutus-ledger/plutus-ledger.cabal
@@ -54,8 +54,10 @@ library
         Ledger.Generators
         Ledger.Orphans
         Ledger.Index
+        Ledger.Index.Internal
         Ledger.Scripts
         Ledger.TimeSlot
+        Ledger.ProtocolParameters
         Ledger.Tokens
         Ledger.Tx
         Ledger.Tx.CardanoAPI
