--- a/plutus-use-cases/plutus-use-cases.cabal
+++ b/plutus-use-cases/plutus-use-cases.cabal
@@ -105,36 +105,36 @@ test-suite plutus-use-cases-test
     main-is: Spec.hs
     hs-source-dirs: test
     other-modules:
---        Spec.Auction
+        Spec.Auction
         Spec.SealedBidAuction
---        Spec.Crowdfunding
---        Spec.Currency
---        Spec.ErrorHandling
---        Spec.Escrow
---        Spec.Escrow.Endpoints
---        Spec.SimpleEscrow
---        Spec.Tutorial.Escrow
---        Spec.Tutorial.Escrow1
---        Spec.Tutorial.Escrow2
---        Spec.Tutorial.Escrow3
---        Spec.Tutorial.Escrow4
---        Spec.Tutorial.Escrow5
---        Spec.Tutorial.Escrow6
---        Spec.Future
---        Spec.Game
---        Spec.GameStateMachine
---        Spec.Governance
---        Spec.MultiSig
---        Spec.MultiSigStateMachine
---        Spec.PingPong
---        Spec.PubKey
+        Spec.Crowdfunding
+        Spec.Currency
+        Spec.ErrorHandling
+        Spec.Escrow
+        Spec.Escrow.Endpoints
+        Spec.SimpleEscrow
+        Spec.Tutorial.Escrow
+        Spec.Tutorial.Escrow1
+        Spec.Tutorial.Escrow2
+        Spec.Tutorial.Escrow3
+        Spec.Tutorial.Escrow4
+        Spec.Tutorial.Escrow5
+        Spec.Tutorial.Escrow6
+        Spec.Future
+        Spec.Game
+        Spec.GameStateMachine
+        Spec.Governance
+        Spec.MultiSig
+        Spec.MultiSigStateMachine
+        Spec.PingPong
+        Spec.PubKey
         Spec.Prism
---        Spec.Rollup
---        Spec.Stablecoin
---        Spec.Uniswap
---        Spec.Uniswap.Endpoints
---        Spec.TokenAccount
---        Spec.Vesting
+        Spec.Rollup
+        Spec.Stablecoin
+        Spec.Uniswap
+        Spec.Uniswap.Endpoints
+        Spec.TokenAccount
+        Spec.Vesting
     default-language: Haskell2010
     default-extensions: ImportQualifiedPost
     ghc-options: -Wall -Wnoncanonical-monad-instances
